...
            android:contentDescription="@string/filters_cross_description"
            android:scaleType="fitCenter"
            android:src="@drawable/cross"
            app:tint="@android:color/holo_red_dark" />

        <ImageButton
            android:id="@+id/newPI_accept_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@null"
            android:layout_weight="1"
            android:adjustViewBounds="true"
...
