<resources>
    <string name="app_name">MyFuel</string>
    <string name="gasolina95label">Gasolina</string>
    <string name="dieselAlabel">Diesel</string>
    <string name="refresh">Recargar</string>
    <string name="info">Info</string>
    <string name="loadCorrect">Se han cargado %d gasolineras</string>
    <string name="loadError">Ha habido un error cargando las gasolineras</string>
    <string name="info_text">Aplicación creada para el Proyecto Integrado Curso 2024-2025</string>

    <!-- Strings para los filtros -->
    <string name="filters_title">Filtros</string>
    <string name="filters_type">Tipo:</string>
    <string name="filters_brand">Marca:</string>
    <string name="filters_max_price">Precio máximo:</string>
    <string name="filters_type_selection">Seleccione ▼</string>
    <string name="filters_brand_selection">Seleccione ▼</string>
    <string name="filters_max_price_selection">Seleccione precio máximo</string>
    <string name="filters_cross_description">Cancelar</string>
    <string name="filters_tick_description">Aceptar</string>
    <string name="all_selections">Todos</string>

    <!-- Strings para el ordenamiento -->
    <string name="order_title">Ordenar por precio</string>
    <string name= "order_type">Combustible:</string>
    <string name="order_price">Tipo orden:</string>
    <!--TODO: Definir los strings-->
    <string name="order_type_selection">Seleccione ▼</string>
    <string name="order_price_selection">Seleccione ▼</string>
    <string name="order_cross_description">Cancelar</string>"
    <string name="order_tick_description">Aceptar</string>

    <!-- Strings para puntos de interes -->
    <!-- Lista -->
    <string name="point_add_button">Añadir</string>
    <string name="point_sort_generic_description">Ordenar</string>
    <string name="point_remove_button">Eliminar</string>
    <string name="point_exit_delete_mode_button">Salir del modo de eliminación</string>
    <!-- Item -->
    <string name="point_location_description">Localizar</string>
    <string name="point_trash_description">Basura</string>
    <string name="point_latitude">Latitud:</string>
    <string name="point_longitude">Longitud:</string>
    <string name="point_name">Nombre:</string>
    <string name="point_radio">Radio:</string>
    <string name="point_radio_units">km</string>
    <string name="back_home">MenuPuntos</string>
    <string name="selector_de_color">Selector de color</string>
    <string name="latitud">Latitud</string>
    <string name="latitud_hint">00.0000</string>
    <string name="longitud">Longitud</string>
    <string name="radio">Radio (Km)</string>
    <string name="color">Color</string>
    <string name="_0_0">0.0</string>
    <string name="nombre">Nombre</string>
    <!-- Confirmation popup -->
    <string name="point_confirmation_title">Eliminar punto</string>
    <string name="point_confirmation_description">¿Esta seguro de que desea eliminar el punto de interes seleccionado?</string>
    <string name="point_confirmation_ok_button">Confirmar</string>
    <string name="point_confirmation_cancel_button">Cancelar</string>

    <!-- Uds -->
    <string name="priceUds">€/l</string>

</resources>