...
                android:textStyle="bold"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/ivLocation"
                app:layout_constraintTop_toTopOf="@+id/ivLocation" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvNameField"
                app:layout_constraintStart_toEndOf="@+id/tvNameField"
...

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/ivTrash"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/point_trash_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
